# PUK

./: HAFTALIK_ILERLEME.md  Untitled Diagram.drawio
grafana/: README.md  Taskfile.yml  flake.nix  shell.nix
grafana/compose/: docker-compose.yml
node_exporter/: .gitignore  README.md  Taskfile.yml
node_exporter/compose/: docker-compose.yml
ocs_inventory/: .gitignore  README.md  Taskfile.yml  shell.nix
ocs_inventory/compose/: .docker-compose.yml.swp  .env.example  docker-compose.yml
ocs_inventory/compose/nginx/auth/: ocsapi.htpasswd
ocs_inventory/compose/nginx/conf/: ocsinventory.conf.template
puk_core_api/: Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements.txt  shell.nix
puk_core_api/alembic/: alembic.ini  env.py
puk_core_api/alembic/versions/: 632ef22578b0_auto_schema_update.py
puk_core_api/compose/: docker-compose.yml
puk_core_api/puk_api/: database.py  main.py  models.py  schemas.py
puk_core_api/puk_api/routers/: __init__.py  hardware.py  software.py
